syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "Electrify.Protos";

package adminLogin;

service AdminLogin {
  rpc AdminLogin (AdminLoginRequest) returns (AdminLoginResponse) {
    option (google.api.http) = {
      post: "/v1/adminLogin",
      body: "*"
    };
  }
}

message AdminLoginRequest {
  string email = 1;
  string password = 2;
}

message AdminLoginResponse {
  bool success = 1;
  string id = 2;
  string name = 3;
  string email = 4;
  string token = 5;
}
